# simd-finance-bench

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
paper/tables/: main_results.tex
results/: alpha_results.json  atr_results.json  beta_results.json  book_imb_results.json  calmar_results.json  convolution_results.json  correlation_results.json  cvar_results.json  ewma_results.json  kyle_lambda_results.json  main_mca.txt  max_drawdown_results.json  rsi_results.json  sharpe_ratio_results.json  simd_bench  sortino_results.json  var_results.json  vwap_results.json
scripts/: visualize.py
src/bench/: main.cpp  vwap_bench.cpp
src/kernels/: alpha.hpp  atr.hpp  beta.hpp  book_imbalance.hpp  calmar_ratio.hpp  convolution.hpp  correlation.hpp  cvar.hpp  ewma.hpp  kyle_lambda.hpp  max_drawdown.hpp  rsi.hpp  sharpe_ratio.hpp  sortino_ratio.hpp  var.hpp  vwap.hpp
